--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": " node server.js"
+    "start": " node server.js",
+    "test": " cross-env NODE_ENV=development jest --testTimeout=10000"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -22,5 +23,9 @@
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "ua-parser-js": "^0.7.24"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "supertest": "^6.1.4"
   }
 }
